--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -30,6 +30,10 @@ html {
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
   font-size: 62.5%;
+
+  @media (max-width: 825px) {
+    font-size: 100%;
+  }
 }
 
 /* Set core body defaults */
