--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,16 @@ A reset by:
 https://piccalil.li/blog/a-more-modern-css-reset/
 Also made some adjustments for my own needs  
 */
+:root {
+  --accent-red: hsl(0, 78%, 62%);
+  --accent-cyan: hsl(180, 62%, 55%);
+  --accent-orange: hsl(34, 97%, 64%);
+  --accent-blue: hsl(212, 86%, 64%);
+  --neutral-dark-blue: hsl(234, 12%, 34%);
+  --neutral-grayish-blue: hsl(229, 6%, 66%);
+  --neutral-light-gray: hsl(0, 0%, 98%);
+}
+
 /* Box sizing rules */
 /* Remove initial margins */
 /* Apply font smoothing */
@@ -100,6 +110,7 @@ select {
 .header__text {
   font-size: clamp(0.8rem, 0.2rem + 1vw, 1.7rem);
   font-weight: 200;
+  text-wrap: pretty;
 }
 
 .attribution {
