--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -8,6 +8,23 @@ https://piccalil.li/blog/a-more-modern-css-reset/
 Also made some adjustments for my own needs  
 */
 
+:root {
+  // Colors
+
+  // Accent
+
+  --accent-red: hsl(0, 78%, 62%);
+  --accent-cyan: hsl(180, 62%, 55%);
+  --accent-orange: hsl(34, 97%, 64%);
+  --accent-blue: hsl(212, 86%, 64%);
+
+  // Neutral
+
+  --neutral-dark-blue: hsl(234, 12%, 34%);
+  --neutral-grayish-blue: hsl(229, 6%, 66%);
+  --neutral-light-gray: hsl(0, 0%, 98%);
+}
+
 /* Box sizing rules */
 /* Remove initial margins */
 /* Apply font smoothing */
