--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,8 @@ body {
   font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
+  color: var(--neutral-grayish-blue);
+  background: var(--neutral-light-gray);
 }
 
 /* Remove list styles */
@@ -68,6 +70,7 @@ h2,
 h3,
 h4 {
   text-wrap: balance;
+  color: var(--neutral-dark-blue);
 }
 
 /* Make images easier to work with */
@@ -92,6 +95,7 @@ select {
 .header {
   max-width: 44%;
   text-align: center;
+  margin-bottom: 3em;
 }
 @media (max-width: 825px) {
   .header {
@@ -113,6 +117,49 @@ select {
   text-wrap: pretty;
 }
 
+.four-card {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2em;
+  grid-template-rows: 1fr 1fr;
+  align-items: center;
+  margin-bottom: 2em;
+  width: 90%;
+}
+.four-card .card {
+  box-shadow: 1px 10px 15px 5px hsla(212, 86%, 64%, 0.14);
+  padding: 2em;
+  border-radius: 8px;
+}
+.four-card .card__title {
+  margin-bottom: 0.5em;
+  font-size: 2rem;
+}
+.four-card .card__text {
+  margin-bottom: 2em;
+  width: 94%;
+  font-size: 1.2rem;
+}
+.four-card .card__img {
+  margin-left: auto;
+}
+.four-card .card--1, .four-card .card--4 {
+  border-top: 4px solid var(--accent-cyan);
+  grid-row: span 2;
+  height: calc(50% - 1em);
+  justify-self: center;
+}
+.four-card .card--2 {
+  border-top: 4px solid var(--accent-red);
+}
+.four-card .card--3 {
+  border-top: 4px solid var(--accent-orange);
+  order: 1;
+}
+.four-card .card--4 {
+  border-top: 4px solid var(--accent-blue);
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
@@ -124,8 +171,8 @@ select {
 
 .container {
   padding-inline: 4em;
-  padding-block-start: 5em;
-  padding-block-end: 4em;
+  padding-block-start: 4em;
+  padding-block-end: 2em;
 }
 
 .row {
