--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -62,6 +62,9 @@ body {
   font-size: 1.6rem;
   font-style: normal;
   font-weight: 400;
+  color: var(--neutral-grayish-blue);
+
+  background: var(--neutral-light-gray);
 }
 
 /* Remove list styles */
@@ -76,6 +79,7 @@ h2,
 h3,
 h4 {
   text-wrap: balance;
+  color: var(--neutral-dark-blue);
 }
 
 /* Make images easier to work with */
