--- a/css/main.css
+++ b/css/main.css
@@ -92,31 +92,54 @@ select {
 /* =============
    End of reset 
    ============= */
+/* =============
+   Header
+   ============= */
 .header {
   max-width: 44%;
   text-align: center;
   margin-bottom: 3em;
 }
+@media (max-width: 950px) {
+  .header {
+    margin-bottom: 2em;
+  }
+}
 @media (max-width: 825px) {
   .header {
     max-width: 90%;
+    margin-bottom: 1em;
+  }
+}
+@media (max-width: 600px) {
+  .header {
+    max-width: 100%;
+    margin-bottom: 1em;
   }
 }
 .header__title {
   font-weight: 600;
-  font-size: clamp(0.8rem, 1rem + 1.6vw, 4rem);
+  font-size: clamp(1.8rem, 1rem + 1.6vw, 4rem);
   margin-block-end: 1rem;
 }
 .header__subtitle {
   font-weight: 200;
-  font-size: clamp(0.8rem, 1rem + 1.6vw, 4rem);
+  font-size: clamp(1.8rem, 1rem + 1.6vw, 4rem);
 }
 .header__text {
-  font-size: clamp(0.8rem, 0.2rem + 1vw, 1.7rem);
+  font-size: clamp(1.1rem, 0.2rem + 1vw, 1.7rem);
   font-weight: 200;
   text-wrap: pretty;
 }
+@media (max-width: 600px) {
+  .header__text {
+    text-wrap: balance;
+  }
+}
 
+/* =============
+   Four Card Grid
+   ============= */
 .four-card {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -126,10 +149,26 @@ select {
   margin-bottom: 2em;
   width: 90%;
 }
+@media (max-width: 950px) {
+  .four-card {
+    width: 100%;
+  }
+}
+@media (max-width: 600px) {
+  .four-card {
+    width: 100%;
+    grid-template-columns: 1fr;
+  }
+}
 .four-card .card {
   box-shadow: 1px 10px 15px 5px hsla(212, 86%, 64%, 0.14);
   padding: 2em;
   border-radius: 8px;
+}
+@media (max-width: 950px) {
+  .four-card .card {
+    padding: 1.2em;
+  }
 }
 .four-card .card__title {
   margin-bottom: 0.5em;
@@ -143,11 +182,21 @@ select {
 .four-card .card__img {
   margin-left: auto;
 }
+@media (max-width: 950px) {
+  .four-card .card__img {
+    width: 4rem;
+  }
+}
 .four-card .card--1, .four-card .card--4 {
   border-top: 4px solid var(--accent-cyan);
   grid-row: span 2;
   height: calc(50% - 1em);
   justify-self: center;
+}
+@media (max-width: 600px) {
+  .four-card .card--1, .four-card .card--4 {
+    height: 100%;
+  }
 }
 .four-card .card--2 {
   border-top: 4px solid var(--accent-red);
@@ -173,6 +222,13 @@ select {
   padding-inline: 4em;
   padding-block-start: 4em;
   padding-block-end: 2em;
+}
+@media (max-width: 950px) {
+  .container {
+    padding-inline: 1em;
+    padding-block-start: 2em;
+    padding-block-end: 2em;
+  }
 }
 
 .row {
