--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -1,30 +1,52 @@
+/* =============
+   Header
+   ============= */
+
 .header {
   max-width: 44%;
   text-align: center;
   margin-bottom: 3em;
 
+  @media (max-width: 950px) {
+    margin-bottom: 2em;
+  }
+
   @media (max-width: 825px) {
     max-width: 90%;
+    margin-bottom: 1em;
+  }
+
+  @media (max-width: 600px) {
+    max-width: 100%;
+    margin-bottom: 1em;
   }
 
   &__title {
     font-weight: 600;
-    font-size: clamp(0.8rem, 1rem + 1.6vw, 4rem);
+    font-size: clamp(1.8rem, 1rem + 1.6vw, 4rem);
     margin-block-end: 1rem;
   }
 
   &__subtitle {
     font-weight: 200;
-    font-size: clamp(0.8rem, 1rem + 1.6vw, 4rem);
+    font-size: clamp(1.8rem, 1rem + 1.6vw, 4rem);
   }
 
   &__text {
-    font-size: clamp(0.8rem, 0.2rem + 1vw, 1.7rem);
+    font-size: clamp(1.1rem, 0.2rem + 1vw, 1.7rem);
     font-weight: 200;
 
     text-wrap: pretty;
+
+    @media (max-width: 600px) {
+      text-wrap: balance;
+    }
   }
 }
+
+/* =============
+   Four Card Grid
+   ============= */
 
 .four-card {
   display: grid;
@@ -37,11 +59,25 @@
 
   width: 90%;
 
+  @media (max-width: 950px) {
+    width: 100%;
+  }
+
+  @media (max-width: 600px) {
+    width: 100%;
+
+    grid-template-columns: 1fr;
+  }
+
   .card {
     box-shadow: 1px 10px 15px 5px hsla(212, 86%, 64%, 0.14);
 
     padding: 2em;
     border-radius: 8px;
+
+    @media (max-width: 950px) {
+      padding: 1.2em;
+    }
 
     &__title {
       margin-bottom: 0.5em;
@@ -56,6 +92,10 @@
 
     &__img {
       margin-left: auto;
+
+      @media (max-width: 950px) {
+        width: 4rem;
+      }
     }
   }
 
@@ -65,6 +105,10 @@
 
     height: calc(50% - 1em);
     justify-self: center;
+
+    @media (max-width: 600px) {
+      height: 100%;
+    }
   }
 
   .card--2 {
