--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,6 +10,12 @@
   padding-inline: 4em;
   padding-block-start: 4em;
   padding-block-end: 2em;
+
+  @media (max-width: 950px) {
+    padding-inline: 1em;
+    padding-block-start: 2em;
+    padding-block-end: 2em;
+  }
 }
 
 .row {
