--- a/css/main.css
+++ b/css/main.css
@@ -98,42 +98,44 @@ select {
 .header {
   max-width: 44%;
   text-align: center;
-  margin-bottom: 3em;
+  margin-block-end: 3em;
 }
 @media (max-width: 950px) {
   .header {
-    margin-bottom: 2em;
+    margin-block-end: 2em;
   }
 }
 @media (max-width: 825px) {
   .header {
     max-width: 90%;
-    margin-bottom: 1em;
+    margin-block-end: 1em;
   }
 }
 @media (max-width: 600px) {
   .header {
     max-width: 100%;
-    margin-bottom: 1em;
+    margin-block-start: 1em;
+    margin-block-end: 3em;
   }
 }
 .header__title {
   font-weight: 600;
-  font-size: clamp(1.8rem, 1rem + 1.6vw, 4rem);
+  font-size: clamp(1.9rem, 1rem + 2vw, 4rem);
   margin-block-end: 1rem;
 }
 .header__subtitle {
   font-weight: 200;
-  font-size: clamp(1.8rem, 1rem + 1.6vw, 4rem);
+  font-size: clamp(1.9rem, 1rem + 2vw, 4rem);
 }
 .header__text {
-  font-size: clamp(1.1rem, 0.2rem + 1vw, 1.7rem);
+  font-size: clamp(1.2rem, 0.2rem + 1vw, 1.7rem);
   font-weight: 200;
   text-wrap: pretty;
 }
 @media (max-width: 600px) {
   .header__text {
     text-wrap: balance;
+    font-weight: 400;
   }
 }
 
@@ -146,12 +148,14 @@ select {
   gap: 2em;
   grid-template-rows: 1fr 1fr;
   align-items: center;
-  margin-bottom: 2em;
+  margin-block-end: 2em;
   width: 90%;
+  font-size: 80%;
 }
 @media (max-width: 950px) {
   .four-card {
     width: 100%;
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 @media (max-width: 600px) {
@@ -162,6 +166,7 @@ select {
 }
 .four-card .card {
   box-shadow: 1px 10px 15px 5px hsla(212, 86%, 64%, 0.14);
+  width: 100%;
   padding: 2em;
   border-radius: 8px;
 }
@@ -170,14 +175,41 @@ select {
     padding: 1.2em;
   }
 }
+@media (max-width: 600px) {
+  .four-card .card {
+    padding: 1.5em;
+  }
+}
 .four-card .card__title {
-  margin-bottom: 0.5em;
-  font-size: 2rem;
+  margin-block-end: 0.5em;
+  font-size: clamp(1rem, 0.2rem + 5vw, 4rem);
+}
+@media (max-width: 950px) {
+  .four-card .card__title {
+    font-size: clamp(0.5rem, 0.4rem + 2vw, 3rem);
+  }
+}
+@media (max-width: 600px) {
+  .four-card .card__title {
+    font-size: clamp(1rem, 0.2rem + 5vw, 4rem);
+  }
 }
 .four-card .card__text {
-  margin-bottom: 2em;
-  width: 94%;
-  font-size: 1.2rem;
+  margin-block-end: 2em;
+  width: 100%;
+  font-size: clamp(1rem, 0.2rem + 3vw, 4rem);
+}
+@media (max-width: 950px) {
+  .four-card .card__text {
+    font-size: clamp(0.5rem, 0.4rem + 1vw, 3rem);
+  }
+}
+@media (max-width: 600px) {
+  .four-card .card__text {
+    font-size: clamp(1rem, 0.2rem + 3vw, 4rem);
+    width: 90%;
+    margin-block-end: 3em;
+  }
 }
 .four-card .card__img {
   margin-left: auto;
@@ -187,11 +219,22 @@ select {
     width: 4rem;
   }
 }
+@media (max-width: 600px) {
+  .four-card .card__img {
+    width: 6rem;
+  }
+}
 .four-card .card--1, .four-card .card--4 {
   border-top: 4px solid var(--accent-cyan);
   grid-row: span 2;
   height: calc(50% - 1em);
   justify-self: center;
+}
+@media (max-width: 950px) {
+  .four-card .card--1, .four-card .card--4 {
+    height: 100%;
+    grid-row: span 1;
+  }
 }
 @media (max-width: 600px) {
   .four-card .card--1, .four-card .card--4 {
@@ -205,13 +248,34 @@ select {
   border-top: 4px solid var(--accent-orange);
   order: 1;
 }
+@media (max-width: 950px) {
+  .four-card .card--3 {
+    height: 100%;
+  }
+}
+@media (max-width: 600px) {
+  .four-card .card--3 {
+    order: 0;
+  }
+}
 .four-card .card--4 {
   border-top: 4px solid var(--accent-blue);
+}
+@media (max-width: 600px) {
+  .four-card .card--4 {
+    text-wrap: balance;
+  }
 }
 
 .attribution {
   font-size: 11px;
   text-align: center;
+  text-wrap: balance;
+}
+@media (max-width: 600px) {
+  .attribution {
+    font-size: 1rem;
+  }
 }
 
 .attribution a {
@@ -226,6 +290,13 @@ select {
 @media (max-width: 950px) {
   .container {
     padding-inline: 1em;
+    padding-block-start: 2em;
+    padding-block-end: 2em;
+  }
+}
+@media (max-width: 600px) {
+  .container {
+    padding-inline: 1.5em;
     padding-block-start: 2em;
     padding-block-end: 2em;
   }
