--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -5,41 +5,44 @@
 .header {
   max-width: 44%;
   text-align: center;
-  margin-bottom: 3em;
+  margin-block-end: 3em;
 
   @media (max-width: 950px) {
-    margin-bottom: 2em;
+    margin-block-end: 2em;
   }
 
   @media (max-width: 825px) {
     max-width: 90%;
-    margin-bottom: 1em;
+    margin-block-end: 1em;
   }
 
   @media (max-width: 600px) {
     max-width: 100%;
-    margin-bottom: 1em;
+
+    margin-block-start: 1em;
+    margin-block-end: 3em;
   }
 
   &__title {
     font-weight: 600;
-    font-size: clamp(1.8rem, 1rem + 1.6vw, 4rem);
+    font-size: clamp(1.9rem, 1rem + 2vw, 4rem);
     margin-block-end: 1rem;
   }
 
   &__subtitle {
     font-weight: 200;
-    font-size: clamp(1.8rem, 1rem + 1.6vw, 4rem);
+    font-size: clamp(1.9rem, 1rem + 2vw, 4rem);
   }
 
   &__text {
-    font-size: clamp(1.1rem, 0.2rem + 1vw, 1.7rem);
+    font-size: clamp(1.2rem, 0.2rem + 1vw, 1.7rem);
     font-weight: 200;
 
     text-wrap: pretty;
 
     @media (max-width: 600px) {
       text-wrap: balance;
+      font-weight: 400;
     }
   }
 }
@@ -55,12 +58,15 @@
   grid-template-rows: 1fr 1fr;
   // background-color: var(--accent-cyan);
   align-items: center;
-  margin-bottom: 2em;
+  margin-block-end: 2em;
 
   width: 90%;
 
+  font-size: 80%;
+
   @media (max-width: 950px) {
     width: 100%;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   @media (max-width: 600px) {
@@ -72,6 +78,8 @@
   .card {
     box-shadow: 1px 10px 15px 5px hsla(212, 86%, 64%, 0.14);
 
+    width: 100%;
+
     padding: 2em;
     border-radius: 8px;
 
@@ -79,15 +87,37 @@
       padding: 1.2em;
     }
 
+    @media (max-width: 600px) {
+      padding: 1.5em;
+    }
+
     &__title {
-      margin-bottom: 0.5em;
-      font-size: 2rem;
+      margin-block-end: 0.5em;
+      font-size: clamp(1rem, 0.2rem + 5vw, 4rem);
+
+      @media (max-width: 950px) {
+        font-size: clamp(0.5rem, 0.4rem + 2vw, 3rem);
+      }
+
+      @media (max-width: 600px) {
+        font-size: clamp(1rem, 0.2rem + 5vw, 4rem);
+      }
     }
 
     &__text {
-      margin-bottom: 2em;
-      width: 94%;
-      font-size: 1.2rem;
+      margin-block-end: 2em;
+      width: 100%;
+      font-size: clamp(1rem, 0.2rem + 3vw, 4rem);
+
+      @media (max-width: 950px) {
+        font-size: clamp(0.5rem, 0.4rem + 1vw, 3rem);
+      }
+
+      @media (max-width: 600px) {
+        font-size: clamp(1rem, 0.2rem + 3vw, 4rem);
+        width: 90%;
+        margin-block-end: 3em;
+      }
     }
 
     &__img {
@@ -95,6 +125,10 @@
 
       @media (max-width: 950px) {
         width: 4rem;
+      }
+
+      @media (max-width: 600px) {
+        width: 6rem;
       }
     }
   }
@@ -105,6 +139,11 @@
 
     height: calc(50% - 1em);
     justify-self: center;
+
+    @media (max-width: 950px) {
+      height: 100%;
+      grid-row: span 1;
+    }
 
     @media (max-width: 600px) {
       height: 100%;
@@ -119,11 +158,23 @@
     border-top: 4px solid var(--accent-orange);
 
     order: 1;
+
+    @media (max-width: 950px) {
+      height: 100%;
+    }
+
+    @media (max-width: 600px) {
+      order: 0;
+    }
   }
 
   .card--4 {
     @extend .card--1;
 
     border-top: 4px solid var(--accent-blue);
+
+    @media (max-width: 600px) {
+      text-wrap: balance;
+    }
   }
 }
