--- a/css/main.css
+++ b/css/main.css
@@ -39,7 +39,7 @@ html {
   text-size-adjust: none;
   font-size: 62.5%;
 }
-@media (max-width: 825px) {
+@media (max-width: 1200px) {
   html {
     font-size: 100%;
   }
@@ -100,12 +100,13 @@ select {
   text-align: center;
   margin-block-end: 3em;
 }
-@media (max-width: 950px) {
+@media (max-width: 1200px) {
   .header {
+    max-width: 90%;
     margin-block-end: 2em;
   }
 }
-@media (max-width: 825px) {
+@media (max-width: 850px) {
   .header {
     max-width: 90%;
     margin-block-end: 1em;
@@ -152,7 +153,7 @@ select {
   width: 90%;
   font-size: 80%;
 }
-@media (max-width: 950px) {
+@media (max-width: 1200px) {
   .four-card {
     width: 100%;
     grid-template-columns: repeat(2, 1fr);
@@ -170,7 +171,7 @@ select {
   padding: 2em;
   border-radius: 8px;
 }
-@media (max-width: 950px) {
+@media (max-width: 1200px) {
   .four-card .card {
     padding: 1.2em;
   }
@@ -184,7 +185,7 @@ select {
   margin-block-end: 0.5em;
   font-size: clamp(1rem, 0.2rem + 5vw, 4rem);
 }
-@media (max-width: 950px) {
+@media (max-width: 1200px) {
   .four-card .card__title {
     font-size: clamp(0.5rem, 0.4rem + 2vw, 3rem);
   }
@@ -199,7 +200,7 @@ select {
   width: 100%;
   font-size: clamp(1rem, 0.2rem + 3vw, 4rem);
 }
-@media (max-width: 950px) {
+@media (max-width: 1200px) {
   .four-card .card__text {
     font-size: clamp(0.5rem, 0.4rem + 1vw, 3rem);
   }
@@ -214,7 +215,7 @@ select {
 .four-card .card__img {
   margin-left: auto;
 }
-@media (max-width: 950px) {
+@media (max-width: 1200px) {
   .four-card .card__img {
     width: 4rem;
   }
@@ -230,7 +231,7 @@ select {
   height: calc(50% - 1em);
   justify-self: center;
 }
-@media (max-width: 950px) {
+@media (max-width: 1200px) {
   .four-card .card--1, .four-card .card--4 {
     height: 100%;
     grid-row: span 1;
@@ -248,7 +249,7 @@ select {
   border-top: 4px solid var(--accent-orange);
   order: 1;
 }
-@media (max-width: 950px) {
+@media (max-width: 1200px) {
   .four-card .card--3 {
     height: 100%;
   }
