--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -7,11 +7,12 @@
   text-align: center;
   margin-block-end: 3em;
 
-  @media (max-width: 950px) {
+  @media (max-width: 1200px) {
+    max-width: 90%;
     margin-block-end: 2em;
   }
 
-  @media (max-width: 825px) {
+  @media (max-width: 850px) {
     max-width: 90%;
     margin-block-end: 1em;
   }
@@ -64,7 +65,7 @@
 
   font-size: 80%;
 
-  @media (max-width: 950px) {
+  @media (max-width: 1200px) {
     width: 100%;
     grid-template-columns: repeat(2, 1fr);
   }
@@ -83,7 +84,7 @@
     padding: 2em;
     border-radius: 8px;
 
-    @media (max-width: 950px) {
+    @media (max-width: 1200px) {
       padding: 1.2em;
     }
 
@@ -95,7 +96,7 @@
       margin-block-end: 0.5em;
       font-size: clamp(1rem, 0.2rem + 5vw, 4rem);
 
-      @media (max-width: 950px) {
+      @media (max-width: 1200px) {
         font-size: clamp(0.5rem, 0.4rem + 2vw, 3rem);
       }
 
@@ -109,7 +110,7 @@
       width: 100%;
       font-size: clamp(1rem, 0.2rem + 3vw, 4rem);
 
-      @media (max-width: 950px) {
+      @media (max-width: 1200px) {
         font-size: clamp(0.5rem, 0.4rem + 1vw, 3rem);
       }
 
@@ -123,7 +124,7 @@
     &__img {
       margin-left: auto;
 
-      @media (max-width: 950px) {
+      @media (max-width: 1200px) {
         width: 4rem;
       }
 
@@ -140,7 +141,7 @@
     height: calc(50% - 1em);
     justify-self: center;
 
-    @media (max-width: 950px) {
+    @media (max-width: 1200px) {
       height: 100%;
       grid-row: span 1;
     }
@@ -159,7 +160,7 @@
 
     order: 1;
 
-    @media (max-width: 950px) {
+    @media (max-width: 1200px) {
       height: 100%;
     }
 
