Feat: Add responsive design for max 1350px

--- a/css/main.css
+++ b/css/main.css
@@ -39,6 +39,11 @@ html {
   text-size-adjust: none;
   font-size: 62.5%;
 }
+@media (max-width: 1350px) {
+  html {
+    font-size: 25%;
+  }
+}
 @media (max-width: 1200px) {
   html {
     font-size: 100%;
@@ -98,11 +103,17 @@ select {
 .header {
   max-width: 44%;
   text-align: center;
-  margin-block-end: 3em;
+  margin-block-end: 3.5em;
+}
+@media (max-width: 1350px) {
+  .header {
+    max-width: 60%;
+    margin-block-end: 5em;
+  }
 }
 @media (max-width: 1200px) {
   .header {
-    max-width: 90%;
+    max-width: 70%;
     margin-block-end: 2em;
   }
 }
@@ -124,14 +135,44 @@ select {
   font-size: clamp(1.9rem, 1rem + 2vw, 4rem);
   margin-block-end: 1rem;
 }
+@media (max-width: 1350px) {
+  .header__title {
+    font-size: 8rem;
+  }
+}
+@media (max-width: 1200px) {
+  .header__title {
+    font-size: clamp(1.9rem, 1rem + 2vw, 2.5rem);
+  }
+}
 .header__subtitle {
   font-weight: 200;
   font-size: clamp(1.9rem, 1rem + 2vw, 4rem);
+}
+@media (max-width: 1350px) {
+  .header__subtitle {
+    font-size: 8rem;
+  }
+}
+@media (max-width: 1200px) {
+  .header__subtitle {
+    font-size: clamp(1.9rem, 1rem + 2vw, 2.5rem);
+  }
 }
 .header__text {
   font-size: clamp(1.2rem, 0.2rem + 1vw, 1.7rem);
   font-weight: 200;
   text-wrap: pretty;
+}
+@media (max-width: 1350px) {
+  .header__text {
+    font-size: 5rem;
+  }
+}
+@media (max-width: 1200px) {
+  .header__text {
+    font-size: clamp(1.2rem, 0.2rem + 1vw, 1.7rem);
+  }
 }
 @media (max-width: 600px) {
   .header__text {
@@ -146,10 +187,10 @@ select {
 .four-card {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 2em;
+  gap: 4em;
   grid-template-rows: 1fr 1fr;
   align-items: center;
-  margin-block-end: 2em;
+  margin-block-end: 4em;
   width: 90%;
   font-size: 80%;
 }
@@ -157,6 +198,8 @@ select {
   .four-card {
     width: 100%;
     grid-template-columns: repeat(2, 1fr);
+    gap: 2em;
+    margin-block-end: 2em;
   }
 }
 @media (max-width: 600px) {
@@ -168,7 +211,7 @@ select {
 .four-card .card {
   box-shadow: 1px 10px 15px 5px hsla(212, 86%, 64%, 0.14);
   width: 100%;
-  padding: 2em;
+  padding: 4em;
   border-radius: 8px;
 }
 @media (max-width: 1200px) {
@@ -183,16 +226,16 @@ select {
 }
 .four-card .card__title {
   margin-block-end: 0.5em;
-  font-size: clamp(1rem, 0.2rem + 5vw, 4rem);
+  font-size: clamp(1rem, 0.2rem + 5vw, 6rem);
 }
 @media (max-width: 1200px) {
   .four-card .card__title {
-    font-size: clamp(0.5rem, 0.4rem + 2vw, 3rem);
+    font-size: clamp(0.5rem, 0.4rem + 2vw, 1.5rem);
   }
 }
 @media (max-width: 600px) {
   .four-card .card__title {
-    font-size: clamp(1rem, 0.2rem + 5vw, 4rem);
+    font-size: clamp(1rem, 0.2rem + 5vw, 1.7rem);
   }
 }
 .four-card .card__text {
@@ -285,8 +328,15 @@ select {
 
 .container {
   padding-inline: 4em;
-  padding-block-start: 4em;
-  padding-block-end: 2em;
+  padding-block-start: 6em;
+  padding-block-end: 4em;
+}
+@media (max-width: 1200px) {
+  .container {
+    padding-inline: 2em;
+    padding-block-start: 1.5em;
+    padding-block-end: 2em;
+  }
 }
 @media (max-width: 950px) {
   .container {
