--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -14,8 +14,14 @@
 
 .container {
   padding-inline: 4em;
-  padding-block-start: 4em;
-  padding-block-end: 2em;
+  padding-block-start: 6em;
+  padding-block-end: 4em;
+
+  @media (max-width: 1200px) {
+    padding-inline: 2em;
+    padding-block-start: 1.5em;
+    padding-block-end: 2em;
+  }
 
   @media (max-width: 950px) {
     padding-inline: 1em;
