Fix: Calc function now creates 4 equal squared cards

--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ html {
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
-  font-size: 62.5%;
+  font-size: 21%;
 }
 @media (max-width: 1350px) {
   html {
@@ -54,6 +54,7 @@ html {
 body {
   /*Box model stuff*/
   min-height: 100vh;
+  max-width: 100vw;
   /*Typography stuff*/
   font-family: "Poppins", sans-serif;
   font-size: 1.6rem;
@@ -187,18 +188,23 @@ select {
 .four-card {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 4em;
+  gap: 7em;
   grid-template-rows: 1fr 1fr;
   align-items: center;
-  margin-block-end: 4em;
   width: 90%;
   font-size: 80%;
+}
+@media (max-width: 1350px) {
+  .four-card {
+    margin-block-end: 2em;
+    gap: 6em;
+  }
 }
 @media (max-width: 1200px) {
   .four-card {
     width: 100%;
     grid-template-columns: repeat(2, 1fr);
-    gap: 2em;
+    gap: 1.5em;
     margin-block-end: 2em;
   }
 }
@@ -211,8 +217,15 @@ select {
 .four-card .card {
   box-shadow: 1px 10px 15px 5px hsla(212, 86%, 64%, 0.14);
   width: 100%;
-  padding: 4em;
+  padding-inline: 7em;
+  padding-block: 6em;
   border-radius: 8px;
+  background: #fff;
+}
+@media (max-width: 1350px) {
+  .four-card .card {
+    padding: 4em;
+  }
 }
 @media (max-width: 1200px) {
   .four-card .card {
@@ -239,9 +252,14 @@ select {
   }
 }
 .four-card .card__text {
-  margin-block-end: 2em;
+  margin-block-end: 2.5em;
   width: 100%;
   font-size: clamp(1rem, 0.2rem + 3vw, 4rem);
+}
+@media (max-width: 1200px) {
+  .four-card .card__text {
+    margin-block-end: 2em;
+  }
 }
 @media (max-width: 1200px) {
   .four-card .card__text {
@@ -271,8 +289,13 @@ select {
 .four-card .card--1, .four-card .card--4 {
   border-top: 4px solid var(--accent-cyan);
   grid-row: span 2;
-  height: calc(50% - 1em);
+  height: calc(50% - 3.5em);
   justify-self: center;
+}
+@media (max-width: 1350px) {
+  .four-card .card--1, .four-card .card--4 {
+    height: calc(50% - 3em);
+  }
 }
 @media (max-width: 1200px) {
   .four-card .card--1, .four-card .card--4 {
@@ -327,9 +350,16 @@ select {
 }
 
 .container {
-  padding-inline: 4em;
-  padding-block-start: 6em;
+  padding-inline: 18.8em;
+  padding-block-start: 4.8em;
   padding-block-end: 4em;
+}
+@media (max-width: 1350px) {
+  .container {
+    padding-inline: 4em;
+    padding-block-start: 6em;
+    padding-block-end: 4em;
+  }
 }
 @media (max-width: 1200px) {
   .container {
