--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -93,6 +93,8 @@
 
   font-size: 80%;
 
+  margin-block-end: 4em;
+
   @media (max-width: 1350px) {
     margin-block-end: 2em;
     gap: 6em;
@@ -113,13 +115,14 @@
   }
 
   .card {
+    display: grid;
     box-shadow: 1px 10px 15px 5px hsla(212, 86%, 64%, 0.14);
 
     width: 100%;
 
-    padding-inline: 7em;
-    padding-block: 6em;
-    border-radius: 8px;
+    padding: 7.5em;
+    padding-block-end: 7.3em;
+    border-radius: 5px;
 
     background: #fff;
 
@@ -138,6 +141,12 @@
     &__title {
       margin-block-end: 0.5em;
       font-size: clamp(1rem, 0.2rem + 5vw, 6rem);
+      margin-block-start: -1.8rem;
+
+      @media (max-width: 1350px) {
+        margin-block-start: 0;
+        margin-inline-start: 0rem;
+      }
 
       @media (max-width: 1200px) {
         font-size: clamp(0.5rem, 0.4rem + 2vw, 1.5rem);
@@ -149,9 +158,16 @@
     }
 
     &__text {
-      margin-block-end: 2.5em;
+      margin-block-end: 3em;
       width: 100%;
       font-size: clamp(1rem, 0.2rem + 3vw, 4rem);
+      margin-block-start: -1.6rem;
+      line-height: 1.7em;
+
+      @media (max-width: 1350px) {
+        line-height: normal;
+        margin-block-start: 0;
+      }
 
       @media (max-width: 1200px) {
         margin-block-end: 2em;
@@ -169,7 +185,8 @@
     }
 
     &__img {
-      margin-left: auto;
+      margin-inline-start: auto;
+      align-self: end;
 
       @media (max-width: 1200px) {
         width: 4rem;
