--- a/sass/_components.scss
+++ b/sass/_components.scss
@@ -5,7 +5,7 @@
 .header {
   max-width: 44%;
   text-align: center;
-  margin-block-end: 3.5em;
+  margin-block-end: 12em;
 
   @media (max-width: 1350px) {
     max-width: 60%;
@@ -31,11 +31,12 @@
 
   &__title {
     font-weight: 600;
-    font-size: clamp(1.9rem, 1rem + 2vw, 4rem);
-    margin-block-end: 1rem;
+    font-size: 10.8rem;
+    margin-block-end: 4.3rem;
 
     @media (max-width: 1350px) {
       font-size: 8rem;
+      margin-block-end: 0;
     }
 
     @media (max-width: 1200px) {
@@ -45,7 +46,8 @@
 
   &__subtitle {
     font-weight: 200;
-    font-size: clamp(1.9rem, 1rem + 2vw, 4rem);
+    font-size: 10.8rem;
+    margin-block-end: -1rem;
 
     @media (max-width: 1350px) {
       font-size: 8rem;
@@ -57,13 +59,14 @@
   }
 
   &__text {
-    font-size: clamp(1.2rem, 0.2rem + 1vw, 1.7rem);
-    font-weight: 200;
+    font-size: 4.5rem;
+    font-weight: 400;
 
     text-wrap: pretty;
 
     @media (max-width: 1350px) {
       font-size: 5rem;
+      font-weight: 200;
     }
 
     @media (max-width: 1200px) {
@@ -93,7 +96,7 @@
 
   font-size: 80%;
 
-  margin-block-end: 4em;
+  margin-block-end: 6em;
 
   @media (max-width: 1350px) {
     margin-block-end: 2em;
