Docs: Add comments to CSS

--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,3 +1,7 @@
+/* =============
+   Footer 
+   ============= */
+
 .attribution {
   font-size: 11px;
   text-align: center;
@@ -11,6 +15,10 @@
 .attribution a {
   color: hsl(228, 45%, 44%);
 }
+
+/* =============
+   Wrapper 
+   ============= */
 
 .container {
   padding-inline: 18.8em;
